@@ -16,6 +16,8 @@ changes in sbcl-0.9.16 relative to sbcl-0.9.15:
     defaults.
   * bug fix: erronous calls to PATHNAME were being optimized away.
     (reported by Richard Kreuter)
+  * bug fix: compiled calls to TYPEP were mishandling obsolete
+    instances.  (reported by James Bielman and Attila Lendvai)
 
 changes in sbcl-0.9.15 relative to sbcl-0.9.14:
   * added support for the ucs-2 external format.  (contributed by Ivan
